[gd_scene load_steps=6 format=3 uid="uid://gg36lgyob47a"]

[ext_resource type="Script" uid="uid://doiifxwkl5sxp" path="res://views/game_pause.gd" id="1_gejvn"]
[ext_resource type="FontFile" uid="uid://dnyg6pd3wordy" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="2_kvolk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xh70q"]
bg_color = Color(0.8790061, 0.5875924, 0.30984393, 0.9490196)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8352941, 0.39607844, 0.32941177, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1jh0"]
bg_color = Color(0.5774341, 0.617245, 0.5326643, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yo6u8"]
bg_color = Color(0.44796455, 0.484429, 0.40744576, 1)

[node name="GamePauseModal" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gejvn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModalPanel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xh70q")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ModalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/ModalPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kvolk")
theme_override_font_sizes/font_size = 36
text = "暂停"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/ModalPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q1jh0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/hover = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/focus = SubResource("StyleBoxFlat_yo6u8")
text = "继续(ESC)"

[node name="ReturnButton" type="Button" parent="CenterContainer/ModalPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q1jh0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/hover = SubResource("StyleBoxFlat_yo6u8")
theme_override_styles/focus = SubResource("StyleBoxFlat_yo6u8")
text = "返回菜单(Space)"

[connection signal="pressed" from="CenterContainer/ModalPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/ModalPanel/VBoxContainer/ReturnButton" to="." method="_on_return_pressed"]
